# complex-plots

./: .gitignore  LICENSE
src/: CMakeLists.txt
src/cplot/: CMakeLists.txt
src/cplot/include/cplot/: anim.h  color.h  image.h  plot.h  version.h
src/cplot/src/: anim.c  image.c  plot.c
src/cplot/src/color-funcs/: arb_color_funcs.c  standard_color_funcs.c  transform_color_funcs.c  utility.c
src/cplot/test/: CMakeLists.txt  t_plot.c
